--- a/MovieRentalApplication/Views/Shared/_Layout.cshtml
+++ b/MovieRentalApplication/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Movie List", "Movies","Movies" )</li>
-                    <li>@Html.ActionLink("Customer List", "Customers","Customers")</li>
-                    <li>@Html.ActionLink("Rentals", "Rentals","Rentals")</li>
+                    <li>@Html.ActionLink("Movie List", "Index","Movies" )</li>
+                    <li>@Html.ActionLink("Customer List", "Index","Customers")</li>
+                    <li>@Html.ActionLink("Rentals", "Index","Rentals")</li>
                 </ul>
             </div>
         </div>
