navbar home fixed

--- a/MovieRentalApplication/Views/Home/Index.cshtml
+++ b/MovieRentalApplication/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿ @{
+    ViewBag.Title = " ";
+}  
 
 <div class="jumbotron">
     <h1>Movie Rental APP</h1>
